Name:                htodo

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis: A todo program, written in Haskell for Power Users and Developers.

-- A longer description of the package.
Description: This program is supposed to make the management of ToDo items a breez. It is aimed at
   being both simple and comprehensive at the same time to achieve everything that a person is likely
   to want to do with a todo item.

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Robert Massaioli

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          Robert Massaioli <robertmassaioli@gmail.com>

-- A copyright notice.
-- Copyright:           

Category:            Database

Build-type:          Simple

-- Extra files to be distributed with the package
Extra-source-files:  README.markdown 

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Executable htodo
  hs-source-dirs:       src
  Main-is:              Main.hs
  
  -- Packages needed in order to build this package.
  -- All of these dependancies have been chosen specifically because they should work in Windows and
  -- Linux amongst others.
  Build-depends:       
      base 
      , directory == 1.1.0.0
      , time >= 1.2
      , cmdargs == 0.6.5
      , parsec == 3.1.0
      , HDBC == 2.2.6.1
      , HDBC-sqlite3 == 2.3.1.0
      , mtl == 1.1.0.2
      , haskeline == 0.6.3.3
      , MaybeT == 0.1.2
      -- remove once done
      , filepath == 1.2.0.0
      , pretty-show == 1.1.1
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
